NXP-15592: wip